<resources>
    <string name="app_name">Math Game</string>
    <string name="addition">addition</string>
    <string name="subtraction">subtraction</string>
    <string name="multiplication">multiplication</string>
    <string name="score">Score</string>
    <string name="life">Life</string>
    <string name="time">Time</string>
    <string name="please_write_your_answer">Please write your answer</string>
    <string name="ok">Ok</string>
    <string name="next_question">Next Question</string>
</resources>